# wechatpay

./: Cargo.toml
src/: client.rs  credential.rs  error.rs  lib.rs  notify.rs  partner.rs  platform_certificate.rs  refund.rs  trade.rs
src/partner/: applyment.rs  shou_fu_tong.rs
src/partner/shou_fu_tong/: applyment.rs  combine_trade.rs  fund.rs  fund_balance.rs  fund_withdraw.rs  profit_sharing.rs  refund.rs
src/partner/shou_fu_tong/applyment/: apply_query.rs  settlement.rs  utils.rs
src/partner/shou_fu_tong/combine_trade/: mini_program_pay.rs  notify.rs
src/partner/shou_fu_tong/profit_sharing/: share_apply.rs  share_finish.rs  share_query.rs  share_remainder.rs
src/partner/shou_fu_tong/refund/: refund_apply.rs  refund_query.rs
