[package]
name = "wechatpay"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.94"
async-trait = "0.1.85"
base64 = "0.22.1"
bytes = "1.9.0"
chrono = "0.4.38"
http = "1.2.0"
hyper = "1.5.1"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
rsa = { version = "0.9.7", features = ["sha2"] }
sha1 = "0.10.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.12.0"
thiserror = "2.0.5"
tower = { version = "0.5.1", features = ["util"] }
